--- a/HelloMaps/app/src/debug/res/values/google_maps_api.xml
+++ b/HelloMaps/app/src/debug/res/values/google_maps_api.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-        AIzaSyCPJq6GrN-Zd4vVQfsWe11drJChfAX7xPI
+        AIzaSyDxDSgc3r38htdlR8ioqUNfGi9juM--Q2U
+       <!-- AIzaSyCPJq6GrN-Zd4vVQfsWe11drJChfAX7xPI-->
     </string>
 </resources>
